# ManyAlgorithms

./: CMakeLists.txt  How to build.txt
src/: main.c
src/Graph/search/: Depth.c  Depth.h  Width.c  Width.h
src/sorts/: BubbleSort.c  BubbleSort.h  CountSort.c  CountSort.h  QuickSort.c  QuickSort.h  SelectionSort.c  SelectionSort.h
src/structs/: queue.c  queue.h  stack.c  stack.h
